--- a/mazuxe/index.html
+++ b/mazuxe/index.html
@@ -55,7 +55,70 @@
               More</a>
           </div>
           <div class="col-lg-6">
-            <img src="img/book.png" alt="" class="img-fluid display-none d-lg-block">
+            <img src="img/book.png" alt="" class="img-fluid d-none d-lg-block">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- NEWSLETTER -->
+
+  <section class="bg-dark text-white py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <input type="text" class="form-control form-control-lg mb-resp" placeholder="Enter Name">
+        </div>
+        <div class="col-md-4">
+          <input type="email" class="form-control form-control-lg mb-resp" placeholder="Enter Email">
+        </div>
+        <div class="col-md-4">
+          <button class="btn btn-primary btn-lg btn-block">
+            <i class="fas fa-envelope-open-o">Subscribe</i>
+          </button>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- BOXES -->
+
+  <section id="boxes" class="py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3">
+          <div class="card text-center border-primary mb-resp">
+            <div class="card-body">
+              <h3 class="text-primary">Be Better</h3>
+              <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, ea.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card text-center bg-primary text-white mb-resp">
+            <div class="card-body">
+              <h3>Be Smarter</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, ea.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card text-center border-primary mb-resp">
+            <div class="card-body">
+              <h3 class="text-primary">Be Faster</h3>
+              <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, ea.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="col-md-3">
+            <div class="card text-center bg-primary text-white">
+              <div class="card-body">
+                <h3>Be Stronger</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, ea.</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
