--- a/mazuxe/index.html
+++ b/mazuxe/index.html
@@ -111,12 +111,83 @@
             </div>
           </div>
         </div>
+
         <div class="col-md-3">
-          <div class="col-md-3">
-            <div class="card text-center bg-primary text-white">
-              <div class="card-body">
-                <h3>Be Stronger</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, ea.</p>
+          <div class="card text-center bg-primary text-white">
+            <div class="card-body">
+              <h3>Be Stronger</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, ea.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- ABOUT / WHY -->
+  <section id="about" class="py-5 text-center bg-light">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <div class="info-header mb-5">
+            <h1 class="text-primary pb-3">
+              Why This Book?
+            </h1>
+            <p class="lead pb-3">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime illum ut mollitia, officiis suscipit eum?
+            </p>
+          </div>
+          <!-- ACCORDION -->
+          <div id="accordion">
+            <div class="card">
+              <div class="card-header">
+                <h5 class="mb-0">
+                  <div href="#collapse1" data-toggle="collapse" data-parent="#accordion">
+                    <i class="fas fa-arrow-circle-down"></i> Get Inspired
+                  </div>
+                </h5>
+              </div>
+              <div id="collapse1" class="collapse show">
+                <div class="card-body">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat amet, ullam dignissimos quas non
+                  distinctio et iure maiores nihil reiciendis consequatur ipsa sed quaerat molestias ut. Libero
+                  obcaecati praesentium reprehenderit. Assumenda, ad cupiditate? Voluptatum, doloribus totam. Dolores,
+                  officia deleniti quasi tenetur eligendi autem nemo blanditiis tempora enim at aspernatur nihil.
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header">
+                <h5 class="mb-0">
+                  <div href="#collapse2" data-toggle="collapse" data-parent="#accordion">
+                    <i class="fas fa-arrow-circle-down"></i> Gain The Knowledge
+                  </div>
+                </h5>
+              </div>
+              <div id="collapse2" class="collapse">
+                <div class="card-body">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat amet, ullam dignissimos quas non
+                  distinctio et iure maiores nihil reiciendis consequatur ipsa sed quaerat molestias ut. Libero
+                  obcaecati praesentium reprehenderit. Assumenda, ad cupiditate? Voluptatum, doloribus totam. Dolores,
+                  officia deleniti quasi tenetur eligendi autem nemo blanditiis tempora enim at aspernatur nihil.
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header">
+                <h5 class="mb-0">
+                  <div href="#collapse3" data-toggle="collapse" data-parent="#accordion">
+                    <i class="fas fa-arrow-circle-down"></i> Open Your Mind
+                  </div>
+                </h5>
+              </div>
+              <div id="collapse3" class="collapse">
+                <div class="card-body">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat amet, ullam dignissimos quas non
+                  distinctio et iure maiores nihil reiciendis consequatur ipsa sed quaerat molestias ut. Libero
+                  obcaecati praesentium reprehenderit. Assumenda, ad cupiditate? Voluptatum, doloribus totam. Dolores,
+                  officia deleniti quasi tenetur eligendi autem nemo blanditiis tempora enim at aspernatur nihil.
+                </div>
               </div>
             </div>
           </div>
