--- a/glozzam/index.html
+++ b/glozzam/index.html
@@ -90,6 +90,62 @@
     </div>
   </section>
 
+  <!-- HOME ICON SECTION -->
+  <section id="home-icons" class="py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 mb-4 text-center">
+          <i class="fas fa-cog fa-3x mb-2"></i>
+          <h3>Turning Gears</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto, nisi.</p>
+        </div>
+        <div class="col-md-4 mb-4 text-center">
+          <i class="fas fa-cloud fa-3x mb-2"></i>
+          <h3>Sending Data</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto, nisi.</p>
+        </div>
+        <div class="col-md-4 mb-4 text-center">
+          <i class="fas fa-cart-plus fa-3x mb-2"></i>
+          <h3>Making Scratch</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto, nisi.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- HOME HEADING -->
+  <section id="home-heading" class="p-5">
+    <div class="dark-overlay">
+      <div class="row">
+        <div class="col">
+          <div class="container pt-5">
+            <h1>Are You Ready To Get Started</h1>
+            <p class="d-none d-md-block">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, modi
+              consectetur voluptate veritatis dolorem repellendus vel doloribus vero provident harum.</p>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- INFO SECTION -->
+  <section id="info" class="py-3">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 align-slef-center">
+          <h3>Lorem ipsum</h3>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro nemo rem saepe et possimus perferendis
+            atque rerum assumenda reiciendis repellendus?</p>
+          <a href="about.html" class="btn btn-outline-danger btn-lg">Learn more</a>
+        </div>
+        <div class="col-md-6 align-slef-center">
+          <img src="img/laptop.png" alt="" class="img-fluid">
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- <span id="year"></span> -->
   <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
@@ -99,6 +155,12 @@
     crossorigin="anonymous"></script>
   <script>
     $('#year').text(new Date().getFullYear());
+
+    // Config Slider
+    $('.carousel').carousel({
+      interval: 6000,
+      pause: 'hover'
+    })
   </script>
 </body>
 
