--- a/glozzam/index.html
+++ b/glozzam/index.html
@@ -1,167 +1,278 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Bootstrap Theme</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+      integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+      href="css/style.css"
+    />
+  </head>
 
-<head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Bootstrap Theme</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
-    crossorigin="anonymous">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-    crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
-</head>
-
-<body>
-  <nav class="nav navbar navbar-expand-sm navbar-dark bg-dark">
-    <div class="container">
-      <a href="index.html" class="navbar-brand">Glozzam</a>
-      <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarCollapse">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a href="index.html" class="nav-link">Home</a>
-          </li>
-          <li class="nav-item">
-            <a href="about.html" class="nav-link">About Us</a>
-          </li>
-          <li class="nav-item">
-            <a href="services.html" class="nav-link">Services</a>
-          </li>
-          <li class="nav-item">
-            <a href="blog.html" class="nav-link">Blog</a>
-          </li>
-          <li class="nav-item">
-            <a href="contact.html" class="nav-link">Contact</a>
-          </li>
-        </ul>
+  <body>
+    <nav class="nav navbar navbar-expand-sm navbar-dark bg-dark">
+      <div class="container">
+        <a href="index.html" class="navbar-brand">Glozzam</a>
+        <button
+          class="navbar-toggler"
+          data-toggle="collapse"
+          data-target="#navbarCollapse"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a href="index.html" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="about.html" class="nav-link">About Us</a>
+            </li>
+            <li class="nav-item">
+              <a href="services.html" class="nav-link">Services</a>
+            </li>
+            <li class="nav-item">
+              <a href="blog.html" class="nav-link">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a href="contact.html" class="nav-link">Contact</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
 
-  <!-- SHOWCASE SLIDER -->
-  <section id="showcase">
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li class="active" data-target="#myCarousel" data-slide-to="0"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item carousel-image-1 active">
-          <div class="container">
-            <div class="carousel-caption d-none d-sm-block text-right mb-5">
-              <h1 class="display-3">Heading One</h1>
-              <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum blanditiis repudiandae,
-                reiciendis optio sapiente maxime quae odit quisquam voluptatibus dignissimos!</p>
-              <a href="#" class="btn btn-danger btn-lg">Sign Up Now</a>
+    <!-- SHOWCASE SLIDER -->
+    <section id="showcase">
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li class="active" data-target="#myCarousel" data-slide-to="0"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+          <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item carousel-image-1 active">
+            <div class="container">
+              <div class="carousel-caption d-none d-sm-block text-right mb-5">
+                <h1 class="display-3">Heading One</h1>
+                <p class="lead">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Rerum blanditiis repudiandae, reiciendis optio sapiente maxime
+                  quae odit quisquam voluptatibus dignissimos!
+                </p>
+                <a href="#" class="btn btn-danger btn-lg">Sign Up Now</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="carousel-item carousel-image-2 ">
+            <div class="container">
+              <div class="carousel-caption d-none d-sm-block mb-5">
+                <h1 class="display-3">Heading Two</h1>
+                <p class="lead">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Rerum blanditiis repudiandae, reiciendis optio sapiente maxime
+                  quae odit quisquam voluptatibus dignissimos!
+                </p>
+                <a href="#" class="btn btn-primary btn-lg">Learn More</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="carousel-item carousel-image-3 ">
+            <div class="container">
+              <div class="carousel-caption d-none d-sm-block text-right mb-5">
+                <h1 class="display-3">Heading Three</h1>
+                <p class="lead">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Rerum blanditiis repudiandae, reiciendis optio sapiente maxime
+                  quae odit quisquam voluptatibus dignissimos!
+                </p>
+                <a href="#" class="btn btn-success btn-lg">Learn Even More</a>
+              </div>
             </div>
           </div>
         </div>
 
-        <div class="carousel-item carousel-image-2 ">
-          <div class="container">
-            <div class="carousel-caption d-none d-sm-block mb-5">
-              <h1 class="display-3">Heading Two</h1>
-              <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum blanditiis repudiandae,
-                reiciendis optio sapiente maxime quae odit quisquam voluptatibus dignissimos!</p>
-              <a href="#" class="btn btn-primary btn-lg">Learn More</a>
+        <a href="#myCarousel" data-slide="prev" class="carousel-control-prev"
+          ><span class="carousel-control-prev-icon"></span
+        ></a>
+        <a href="#myCarousel" data-slide="next" class="carousel-control-next"
+          ><span class="carousel-control-next-icon"></span
+        ></a>
+      </div>
+    </section>
+
+    <!-- HOME ICON SECTION -->
+    <section id="home-icons" class="py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4 mb-4 text-center">
+            <i class="fas fa-cog fa-3x mb-2"></i>
+            <h3>Turning Gears</h3>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Architecto, nisi.
+            </p>
+          </div>
+          <div class="col-md-4 mb-4 text-center">
+            <i class="fas fa-cloud fa-3x mb-2"></i>
+            <h3>Sending Data</h3>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Architecto, nisi.
+            </p>
+          </div>
+          <div class="col-md-4 mb-4 text-center">
+            <i class="fas fa-cart-plus fa-3x mb-2"></i>
+            <h3>Making Scratch</h3>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Architecto, nisi.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- HOME HEADING -->
+    <section id="home-heading" class="p-5">
+      <div class="dark-overlay">
+        <div class="row">
+          <div class="col">
+            <div class="container pt-5">
+              <h1>Are You Ready To Get Started</h1>
+              <p class="d-none d-md-block">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Nostrum, modi consectetur voluptate veritatis dolorem
+                repellendus vel doloribus vero provident harum.
+              </p>
             </div>
           </div>
         </div>
+      </div>
+    </section>
 
-        <div class="carousel-item carousel-image-3 ">
-          <div class="container">
-            <div class="carousel-caption d-none d-sm-block text-right mb-5">
-              <h1 class="display-3">Heading Three</h1>
-              <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum blanditiis repudiandae,
-                reiciendis optio sapiente maxime quae odit quisquam voluptatibus dignissimos!</p>
-              <a href="#" class="btn btn-success btn-lg">Learn Even More</a>
+    <!-- INFO SECTION -->
+    <section id="info" class="py-3">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 align-slef-center">
+            <h3>Lorem ipsum</h3>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro
+              nemo rem saepe et possimus perferendis atque rerum assumenda
+              reiciendis repellendus?
+            </p>
+            <a href="about.html" class="btn btn-outline-danger btn-lg"
+              >Learn more</a
+            >
+          </div>
+          <div class="col-md-6 align-slef-center">
+            <img src="img/laptop.png" alt="" class="img-fluid" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- VIDEO PLAY -->
+    <section id="video-play">
+      <div class="dark-overlay">
+        <div class="row">
+          <div class="col">
+            <div class="container p-5">
+              <a
+                href="3"
+                class="video"
+                data-video="https://www.youtube.com/embed/t6D-ArgwMO4"
+                data-toggle="modal"
+                data-target="#videoModal"
+              >
+                <i class="fas fa-play fa-3x"></i>
+              </a>
+              <h1>See How to Poo</h1>
             </div>
           </div>
         </div>
       </div>
+    </section>
 
-      <a href="#myCarousel" data-slide="prev" class="carousel-control-prev"><span class="carousel-control-prev-icon"></span></a>
-      <a href="#myCarousel" data-slide="next" class="carousel-control-next"><span class="carousel-control-next-icon"></span></a>
-    </div>
-  </section>
-
-  <!-- HOME ICON SECTION -->
-  <section id="home-icons" class="py-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4 mb-4 text-center">
-          <i class="fas fa-cog fa-3x mb-2"></i>
-          <h3>Turning Gears</h3>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto, nisi.</p>
-        </div>
-        <div class="col-md-4 mb-4 text-center">
-          <i class="fas fa-cloud fa-3x mb-2"></i>
-          <h3>Sending Data</h3>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto, nisi.</p>
-        </div>
-        <div class="col-md-4 mb-4 text-center">
-          <i class="fas fa-cart-plus fa-3x mb-2"></i>
-          <h3>Making Scratch</h3>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto, nisi.</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- HOME HEADING -->
-  <section id="home-heading" class="p-5">
-    <div class="dark-overlay">
-      <div class="row">
-        <div class="col">
-          <div class="container pt-5">
-            <h1>Are You Ready To Get Started</h1>
-            <p class="d-none d-md-block">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, modi
-              consectetur voluptate veritatis dolorem repellendus vel doloribus vero provident harum.</p>
-
+    <!-- VISWO MODAL -->
+    <div class="modal fade" id="videoModal">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-body">
+            <button class="close" data-dimiss="modal">
+              <span>&times;</span>
+            </button>
+            <iframe
+              src=""
+              frameborder="0"
+              height="350"
+              width="100%"
+              allowfullscreen
+            ></iframe>
           </div>
         </div>
       </div>
     </div>
-  </section>
 
-  <!-- INFO SECTION -->
-  <section id="info" class="py-3">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6 align-slef-center">
-          <h3>Lorem ipsum</h3>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro nemo rem saepe et possimus perferendis
-            atque rerum assumenda reiciendis repellendus?</p>
-          <a href="about.html" class="btn btn-outline-danger btn-lg">Learn more</a>
-        </div>
-        <div class="col-md-6 align-slef-center">
-          <img src="img/laptop.png" alt="" class="img-fluid">
-        </div>
-      </div>
-    </div>
-  </section>
+    <!-- <span id="year"></span> -->
+    <script
+      src="http://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+      integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+      integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+      crossorigin="anonymous"
+    ></script>
+    <script>
+      $('#year').text(new Date().getFullYear());
 
-  <!-- <span id="year"></span> -->
-  <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-    crossorigin="anonymous"></script>
-  <script>
-    $('#year').text(new Date().getFullYear());
+      // Config Slider
+      $('.carousel').carousel({
+        interval: 6000,
+        pause: 'hover'
+      });
 
-    // Config Slider
-    $('.carousel').carousel({
-      interval: 6000,
-      pause: 'hover'
-    })
-  </script>
-</body>
-
+      // Video Play
+      $(function() {
+        // Auto play modal video
+        $('.video').click(function() {
+          let theModal = $(this).data('target'),
+            videoSRC = $(this).attr('data-video'),
+            videoSRCauto =
+              videoSRC +
+              '?modestbranding=1&rel=0&controls=0&showinfo=0&html5=1&autoplay=1';
+          $(theModal + ' iframe').attr('src', videoSRCauto);
+          $(theModal + ' button.close').click(function() {
+            $(theModal + ' iframe').attr('src', videoSRC);
+          });
+        });
+      });
+    </script>
+  </body>
 </html>
